--- a/about.html
+++ b/about.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>About Illuminote</title>
-    <link rel="stylesheet" href="style.css">
+  <title>About Illuminote</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>About Illuminote</h1>
-    <p>Founded in secrecy, refined through time. Illuminote is a legacy-driven empire rooted in innovation, mystery, and engineered influence.</p>
-    <p>From our Private Reserve to our Records division, each entity is a node of mastery.</p>
+  <h1>Our Origin</h1>
+  <p>Founded in the shadows of the 18th century by Lucien Aucherilum, a disciple of arcane wisdom and forgotten harmonics, Illuminote began as a cultural resistance—an echo of the forbidden.</p>
+  <p>Today, we are a strategic powerhouse with reach in music, tech, finance, mentorship, neurodesign and luxury markets. Our creed—"Where Legacy Isn’t Given. It’s Engineered."—defines our global expansion.</p>
 </body>
 </html>
