--- a/index.html
+++ b/index.html
@@ -1,27 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Illuminote Legacy Group</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Illuminote Legacy Group</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <header>
-        <h1>Illuminote Legacy Group</h1>
-        <p>Where Legacy Isn't Given. It's Engineered.</p>
-        <nav>
-            <a href="about.html">About</a>
-            <a href="subsidiaries.html">Subsidiaries</a>
-            <a href="investors.html">Investors</a>
-            <a href="contact.html">Contact</a>
-            <a href="portal.html">Private Portal</a>
-        </nav>
-    </header>
-    <main>
-        <section>
-            <h2>Our Mission</h2>
-            <p>We are the architects of legacy. A convergence of vision, influence, and design. Our creed guides every decision, our pillars build the future.</p>
-        </section>
-    </main>
+  <header>
+    <h1>Illuminote Legacy Group</h1>
+    <p>"Where Legacy Isn't Given. It's Engineered."</p>
+    <nav>
+      <a href="about.html">About</a>
+      <a href="subsidiaries.html">Divisions</a>
+      <a href="investors.html">Investors</a>
+      <a href="contact.html">Contact</a>
+      <a href="portal.html">Member Portal</a>
+    </nav>
+  </header>
+  <main>
+    <section>
+      <h2>Welcome to Illuminote</h2>
+      <p>A multi-tiered empire fusing visionary business, legacy creation, music, tech, and elite culture. Forged in secrecy, destined for influence.</p>
+    </section>
+  </main>
 </body>
 </html>
