--- a/subsidiaries.html
+++ b/subsidiaries.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Subsidiaries</title>
-    <link rel="stylesheet" href="style.css">
+  <title>Our Divisions</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Subsidiary Overview</h1>
-    <ul>
-        <li><strong>Illuminote Private Reserve:</strong> Shareholder Syndicate</li>
-        <li><strong>Illuminote Records:</strong> Flagship Music Division</li>
-        <li><strong>Frequency Labs:</strong> AI Sonics & Neurotech</li>
-        <li><strong>Illuminote Capital:</strong> Investment & Financial Growth</li>
-        <li><strong>The Circle:</strong> Mentorship & Development</li>
-        <li><strong>Illuminote Ventures:</strong> Tech & Platform Incubation</li>
-        <li><strong>House of Illuminote:</strong> Fashion & Lifestyle</li>
-        <li><strong>Illuminote Archives:</strong> IP & Catalog Preservation</li>
-        <li><strong>Illuminote Syndicate:</strong> Elite Networking</li>
-        <li><strong>The Foundation:</strong> Philanthropic Outreach</li>
-    </ul>
+  <h1>Subsidiaries</h1>
+  <ul>
+    <li><strong>Illuminote Records</strong> – Audio sovereignty, legacy music creation</li>
+    <li><strong>Private Reserve</strong> – Shareholder council and elite syndicate</li>
+    <li><strong>Frequency Labs</strong> – Neurosonics, AI audio, inner tech</li>
+    <li><strong>Illuminote Capital</strong> – Venture & empire funding</li>
+    <li><strong>The Circle</strong> – Mentorship, succession, and grooming of leaders</li>
+    <li><strong>House of Illuminote</strong> – Apparel and cultural assets</li>
+    <li><strong>Illuminote Archives</strong> – Eternal IP, rituals, and cataloguing</li>
+    <li><strong>Syndicate</strong> – Elite connections and covert expansion</li>
+    <li><strong>The Foundation</strong> – Charity and ethical outreach</li>
+  </ul>
 </body>
 </html>
